--- a/HTML/detail.html
+++ b/HTML/detail.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
       rel="stylesheet"
     /> -->
+    <script src="../js/info.js" type="text/javascript"></script>
     <title>Shoesly</title>
   </head>
   <body>
