--- a/HTML/men.html
+++ b/HTML/men.html
@@ -70,73 +70,73 @@
                     <img src="../Images/img-Nike1.jpg" alt="Shoe" style="width:100%" data-src>
                     <h3>Nike Free RN OC</h3>
                     <p class="price">RS 12000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Free RN OC&pic=img-Nike1.jpg&price=RS 12000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/nike-6.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Free RN OC</h3>
                     <p class="price">RS 10000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Free RN OC&pic=nike-6.jpg&price=RS 10000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike3.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air Max (Blue)</h3>
                     <p class="price">RS 11000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Air Max (Blue)&pic=img-Nike3.jpg&price=RS 11000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike4.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air Max (Pink & white)</h3>
                     <p class="price">RS 11000</p>
-                    <p><a href="info.html">Learn More </a></p>
+                    <p><a href="info.html?name=Nike Air Max (Pink & white)&pic=img-Nike4.jpg&price=RS 11000">Learn More </a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike5.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air Max (white)</h3>
                     <p class="price">RS 9000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Air Max (white)&pic=img-Nike5.jpg&price=RS 9000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-nike7.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Run 4.0</h3>
                     <p class="price">RS 8000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Run 4.0&pic=img-nike7.jpg&price=RS 8000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-nike-jordan.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike + Jordan (Special Edition)</h3>
                     <p class="price">RS 9000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike + Jordan (Special Edition)&pic=img-nike-jordan.jpg&price=RS 9000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-nike-jays.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Canvas</h3>
                     <p class="price">RS 7000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Canvas&pic=img-nike-jays.jpg&price=RS 7000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike9.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air Force One (Yellow)</h3>
                     <p class="price">RS 15000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Air Force One (Yellow)&pic=img-Nike9.jpg&price=RS 15000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike10.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air Max (Yellow)</h3>
                     <p class="price">RS 14000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Air Max (Yellow)&pic=img-Nike10.jpg&price=RS 14000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike11.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike + Jordan (Special Edition) Purple</h3>
                     <p class="price">RS 13000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike + Jordan (Special Edition) Purple&pic=img-Nike11.jpg&price=RS 13000">Learn More</a></p>
                 </div>
                 <div class="card">
                     <img src="../Images/img-Nike12.jpg" alt="Shoe" style="width:100%">
                     <h3>Nike Air</h3>
                     <p class="price">RS 6000</p>
-                    <p><a href="./info.html">Learn More</a></p>
+                    <p><a href="./info.html?name=Nike Air&pic=img-Nike12.jpg&price=RS 6000">Learn More</a></p>
                 </div>
         </div>
       </div>
